After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 706326 - (wl_remove_entry) Fix remove_entry and various
(wl_remove_entry)
Fix remove_entry and various
Status: RESOLVED FIXED
Product: GUPnP
Classification: Other
Component: gupnp
0.20.x
Other Linux
: Normal normal
: ---
Assigned To: GUPnP Maintainers
GUPnP Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-08-19 16:28 UTC by Ludovic Ferrandis
Modified: 2013-08-20 08:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix gupnp_white_list_remove_entry (1.03 KB, patch)
2013-08-19 16:28 UTC, Ludovic Ferrandis
none Details | Review
Various fixes (5.58 KB, patch)
2013-08-19 16:29 UTC, Ludovic Ferrandis
committed Details | Review
fix gupnp_white_list_remove_entry (1.07 KB, patch)
2013-08-19 16:42 UTC, Ludovic Ferrandis
committed Details | Review

Description Ludovic Ferrandis 2013-08-19 16:28:19 UTC
Fix gupnp_white_list_remove_entry
Fix compilation with --enable-debug
Add test for gupnp_white_list_remove_entry
Update .gitignore file
Comment 1 Ludovic Ferrandis 2013-08-19 16:28:41 UTC
Created attachment 252258 [details] [review]
fix gupnp_white_list_remove_entry
Comment 2 Ludovic Ferrandis 2013-08-19 16:29:02 UTC
Created attachment 252260 [details] [review]
Various fixes
Comment 3 Ludovic Ferrandis 2013-08-19 16:42:52 UTC
Created attachment 252263 [details] [review]
fix gupnp_white_list_remove_entry

v2: Also free the data
Comment 4 Jens Georg 2013-08-20 08:09:23 UTC
Pushed with minor formatting change (tabs -> spaces)