White List: Fix remove entry function

Remove the GList element found by g_list_find_custom.

https://bugzilla.gnome.org/show_bug.cgi?id=706326