libgupnp/gupnp-white-list.c
@@ -296,7 +296,8 @@ gupnp_white_list_remove_entry (GUPnPWhiteList *white_list, gchar* entry)
                                       (GCompareFunc) g_ascii_strcasecmp);
 
         if (s_entry != NULL) {
-                priv->entries = g_list_remove (priv->entries, entry);
+                priv->entries = g_list_remove_link (priv->entries, s_entry);
+		g_list_free_full (s_entry, g_free);
                 g_object_notify (G_OBJECT (white_list), "entries");
         }
 
